k8s/network/services.yml
# LoadBalancer Service for External Access
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-external
  namespace: spring-cloud-msa
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP

---
# NodePort Services for Development/Debugging
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-nodeport
  namespace: spring-cloud-msa
spec:
  type: NodePort
  selector:
    app: eureka-server
  ports:
  - name: http
    port: 8761
    targetPort: 8761
    nodePort: 30761

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management-nodeport
  namespace: spring-cloud-msa
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
  - name: management
    port: 15672
    targetPort: 15672
    nodePort: 30672

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-nodeport
  namespace: spring-cloud-msa
spec:
  type: NodePort
  selector:
    app: zipkin
  ports:
  - name: http
    port: 9411
    targetPort: 9411
    nodePort: 30411
